fixed unreadable text

--- a/_src-lp/blocks/b-banner/b-banner.scss
+++ b/_src-lp/blocks/b-banner/b-banner.scss
@@ -484,6 +484,7 @@
     right: 0;
     top: 0;
     margin: 15px auto;
+    padding-bottom: 25px;
     position: absolute;
     display: block;
   }
